# wasm-calc

./: Cargo.toml  build.sh  composition.wac
adder/: Cargo.toml  adder.wat  world.wit
adder/src/: bindings.rs  lib.rs
adder_raw/: add.component.wasm  adder.wasm  adder.wat
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
cmd/: Cargo.toml
cmd/src/: bindings.rs  main.rs
logger/: Cargo.toml
logger-export/: Cargo.toml
logger-export/src/: bindings.rs  lib.rs
logger-import/: Cargo.toml
logger-import/src/: bindings.rs  lib.rs
logger/src/: bindings.rs  lib.rs
replay/: Cargo.toml
replay/src/: bindings.rs  main.rs
replay/wit/: world.wit
wit/adder/: world.wit
wit/calculator/: world.wit
wit/logger/: component.wit  world.wit
